--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "FreshChatTest",
-    "slug": "FreshChatTest",
+    "name": "eng",
+    "slug": "eng",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
